--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+	<div id="helper">
+		<textarea id="tmp"></textarea>
+	</div>
+	<div id="app"></div>
 	<script src='bundle.js'></script>
 </body>
 </html>
