--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<div id="helper">
+	<div id="helper" style="display: none">
 		<textarea id="tmp"></textarea>
 	</div>
 	<div id="app"></div>
