upgraded dpes and fixed open link issue

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 		<textarea id="tmp"></textarea>
 	</div>
 	<div id="app"></div>
+	<iframe src="about:blank" id="link-container" style="display: none;"></iframe>
 	<script src='bundle.js'></script>
 </body>
 </html>
